# CSC3050-Project2-riscv_pipeline_simulator

./: CMakeLists.txt  Readme.md
include/elfio/: elf_types.hpp  elfio.hpp  elfio_dump.hpp  elfio_dynamic.hpp  elfio_header.hpp  elfio_note.hpp  elfio_relocation.hpp  elfio_section.hpp  elfio_segment.hpp  elfio_strings.hpp  elfio_symbols.hpp  elfio_utils.hpp
include/simulator/: memory_manager.h  simulator.h
src/: main.cpp  memory_manager.cpp  simulator.cpp
test-extra/: input.c  input.riscv  readme.md
test-release/: add.s  matrixtrans.c  matrixtrans.ref  matrixtrans.riscv  mlp.c  mlp.ref  mlp.riscv  n!.s
